# fastapi-tortoise

./: .env.example  .gitignore  Makefile  README.md  loggers.yml  pyproject.toml  requests.http  tortoise.yml
src/: app.py  constants.py  settings.py
src/config/: __init__.py  utils.py
src/controllers/: __init__.py  todo.py
src/controllers/filters/: __init__.py  base.py  ordering.py  todo.py
src/migrations/models/: 1_20230624150701_None.py
src/models/: __init__.py  base.py  todo.py
src/views/: serializers.py
tests/: migrations.py
